--- a/ProyectoDeLibros/package.json
+++ b/ProyectoDeLibros/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proyectodelibros",
+  "name": "proyectoventa",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.15.14",
+    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
