--- a/ProyectoDeLibros/package.json
+++ b/ProyectoDeLibros/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@mui/icons-material": "^5.15.14",
     "bootstrap": "^5.3.3",
+    "express": "^4.19.2",
+    "nodemon": "^3.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sweetalert2": "^11.10.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
@@ -25,5 +28,10 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "react-router-dom": "^6.22.3",
     "vite": "^5.1.6"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "vite.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
