--- a/ProyectoDeLibros/package.json
+++ b/ProyectoDeLibros/package.json
@@ -13,10 +13,12 @@
     "@mui/icons-material": "^5.15.14",
     "bootstrap": "^5.3.3",
     "express": "^4.19.2",
+    "i": "^0.3.7",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sweetalert2": "^11.10.7"
+    "sweetalert2": "^11.6.13",
+    "universal-cookie": "^7.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
