--- a/ProyectoDeLibros/package.json
+++ b/ProyectoDeLibros/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@mui/icons-material": "^5.15.14",
+    "@react-oauth/google": "^0.12.1",
     "bootstrap": "^5.3.3",
     "express": "^4.19.2",
     "i": "^0.3.7",
+    "jwt-decode": "^4.0.0",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-idle-timer": "^5.7.2",
     "sweetalert2": "^11.6.13",
     "universal-cookie": "^7.1.4"
   },
