--- a/ProyectoDeLibros/package.json
+++ b/ProyectoDeLibros/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mui/icons-material": "^5.15.14",
     "@react-oauth/google": "^0.12.1",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "express": "^4.19.2",
     "i": "^0.3.7",
