--- a/ProyectoDeLibros/package.json
+++ b/ProyectoDeLibros/package.json
@@ -17,10 +17,11 @@
     "express": "^4.19.2",
     "i": "^0.3.7",
     "jwt-decode": "^4.0.0",
-    "nodemon": "^3.1.0",
+    "nodemon": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-idle-timer": "^5.7.2",
+    "start": "^5.1.0",
     "sweetalert2": "^11.6.13",
     "universal-cookie": "^7.1.4"
   },
